Reset the git commit

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ MANIFEST
 *.spec
 
 # Installer logs
+/artifact
+.keras
 pip-log.txt
 pip-delete-this-directory.txt
 
@@ -111,7 +113,8 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
-
+.vscode
+/artifact
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
