--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ __pycache__/
 *.so
 
 .vscode
-artifact/
+artifacts/data_ingestion/*
+artifacts/data_validation/*
 
 # Distribution / packaging
 .Python
