--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 artifact/model.keras filter=lfs diff=lfs merge=lfs -text
+.keras filter=lfs diff=lfs merge=lfs -text
