--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+artifacts/model.keras
 # C extensions
 *.so
-
+.keras
 .vscode
-artifacts/data_ingestion/*
-artifacts/data_validation/*
+artifacts/*
+#artifacts/data_validation/*
 
 # Distribution / packaging
 .Python
