--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
-artifact/model.keras filter=lfs diff=lfs merge=lfs -text
+artifacts/model.keras filter=lfs diff=lfs merge=lfs -text
 .keras filter=lfs diff=lfs merge=lfs -text
 *.keras filter=lfs diff=lfs merge=lfs -text
