--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 artifacts/model.keras filter=lfs diff=lfs merge=lfs -text
 .keras filter=lfs diff=lfs merge=lfs -text
 *.keras filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
